k8s/product-management/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-management
  namespace: product-management
spec:
  replicas: 3
  selector:
    matchLabels:
      app: product-management
  template:
    metadata:
      labels:
        app: product-management
        app.kubernetes.io/part-of: mentee
    spec:
      containers:
        - name: product-management
          image: docker.io/library/product-management:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "128Mi"
              cpu: "250m"
            limits:
              memory: "256Mi"
              cpu: "500m"

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: outbox
  namespace: product-management
spec:
  replicas: 1
  selector:
    matchLabels:
      app: outbox
  template:
    metadata:
      labels:
        app: outbox
        app.kubernetes.io/part-of: mentee
    spec:
      containers:
        - name: product-management
          image: docker.io/library/product-management:latest
          command: ["./product-management", "outbox"]
          imagePullPolicy: Never
          resources:
            requests:
              memory: "128Mi"
              cpu: "250m"
            limits:
              memory: "256Mi"
              cpu: "500m"
