k8s/product-management/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: product-management
  namespace: product-management
spec:
  type: ClusterIP
  selector:
    app: product-management
  ports:
    - port: 80
      targetPort: 8080
